# metadata-generator-hive

./: README.md  pyproject.toml
generate_metadata/: __init__.py  init.py  test.ipynb
generate_metadata/config/: config.json
generate_metadata/data/: res.bz
generate_metadata/libs/: __init__.py  handle_bitmap.py  handle_values.py
